# cpc

./: .gitignore  Cargo.toml  snippet-generator.rs
helper/: Cargo.toml
helper/src/: downloader.rs  executor.rs
src/: MinWBipartiteMatching.rs  adj.rs  aho_corasick.rs  articulation_bridges.rs  circumcircle.rs  closest_points.rs  combinatorics.rs  comparator.rs  complex.rs  count_divisors.rs  dfs_low_mem.rs  direct_planar_graph.rs  fenwick_tree.rs  fft.rs  flows.rs  good_primes.txt  graph.rs  hld.rs  interpolate_polynomial.rs  is_prime.rs  lazy_segment_tree.rs  lazy_segment_tree_beats.rs  lca.rs  lib.rs  lt_sieve.rs  main.rs  maximum_weight_bipartite_matching.rs  minimum_weight_bipartite_matching.rs  modint.rs  ntt.rs  pattern_matching_wildcards.rs  persistent_segment_tree.rs  polyprod.rs  rbtree.rs  rope.rs  seg2_tree.rs  segment_tree.rs  sieve.rs  sqrt.rs  template.rs  (+4 more)
