[package]
name = "helper"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }

[[bin]]
name = "downloader"
path = "src/downloader.rs"

[[bin]]
name = "executor"
path = "src/executor.rs"
